--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "CucumberWorkshop",
   "version": "1.0.0",
   "description": "Shouty exercise in JavaScript",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "cucumber-js"
   },
@@ -25,6 +25,10 @@
     "cucumber": "^0.4.8",
     "mocha": "^2.2.1",
     "sinon": "^1.14.1",
-    "sinon-chai": "^2.7.0"
+    "sinon-chai": "^2.7.0",
+    "express": "^4.13.4",
+    "jade": "^1.11.0",
+    "body-parser": "^1.12.3",
+    "selenium-webdriver": "latest"
   }
 }
